--- a/gcmapp/Info.plist
+++ b/gcmapp/Info.plist
@@ -2,10 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string></string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDocumentTypes</key>
@@ -28,6 +24,10 @@
 	<string>19</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string></string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string></string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Linotype - Alternate Gothic LT No2.ttf</string>
@@ -78,7 +78,7 @@
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
 	<key>api_url</key>
-	<string>https://measurements.global-registry.org/v5/</string>
+	<string>https://measurements-api.cru.org/v5/</string>
 	<key>old_api_url</key>
 	<string>https://measurements.global-registry.org/v4/</string>
 </dict>
